--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,6 +1,6 @@
 #home-search {
   position: fixed;
-  top: 50%;
+  top: 45%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
 }
