Improved comparison between last.fm and spotify data

--- a/src/styles/layout/index.scss
+++ b/src/styles/layout/index.scss
@@ -3,6 +3,7 @@ html {
     background-color: $background-dark;
 }
 body {
+    margin: 0;
     &.light{
         color: $text-light;
         background-color: $background-light;
