--- a/src/styles/layout/lightbox.scss
+++ b/src/styles/layout/lightbox.scss
@@ -34,6 +34,8 @@
             background-size: cover;
             margin: 0 auto;
             border-radius:6px;
+            -webkit-box-shadow: 0px 0px 25px 5px rgba(0,0,0,0.5); 
+            box-shadow: 0px 0px 25px 5px rgba(0,0,0,0.5);
         }
         ul{
             h2 {
