--- a/src/styles/pages/similarArtist.scss
+++ b/src/styles/pages/similarArtist.scss
@@ -7,10 +7,17 @@
     background-color: rgba(0,0,0,.5);
     padding: .25em;
     border-radius: 10px;
+    animation: fadein 1s;
 }
 body {
     overflow: hidden;
 }
 #last_link:hover {
         color: #d92323;
+}
+
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
