--- a/src/styles/components/searchbar.scss
+++ b/src/styles/components/searchbar.scss
@@ -1,3 +1,5 @@
+@import '../colors';
+
 #home-search{
     animation: fadein 2s;
     input {
@@ -5,7 +7,7 @@
         color: white;
         font-size: 2em;
         border-radius: 10px;
-        border-color: transparent;
+        border-color:transparent;
         padding: .1em .25em;
         outline: none;
         &.populated {
