--- a/src/styles/layout/lightbox.scss
+++ b/src/styles/layout/lightbox.scss
@@ -33,7 +33,7 @@
             background-repeat: no-repeat; 
             background-size: cover;
             margin: 0 auto;
-            border-radius:6px;
+            border-radius:50%;
             -webkit-box-shadow: 0px 0px 25px 5px rgba(0,0,0,0.5); 
             box-shadow: 0px 0px 25px 5px rgba(0,0,0,0.5);
         }
