--- a/src/styles/pages/similarArtist.scss
+++ b/src/styles/pages/similarArtist.scss
@@ -1,3 +1,5 @@
+@import '../colors';
+
 #artist-title {
     text-align: center;
     z-index: 1;
@@ -5,10 +7,45 @@
     left: 50%;
     transform: translate(-50%, 0);
     background-color: rgba(0,0,0,.5);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     padding: .25em;
     border-radius: 10px;
-    animation: fadein 1s;
+    animation: fadein 1s ease-in;
+    transition: color 0.25s ease-in;
+    &:hover {
+        cursor: pointer;
+        color: $accent-light;
+        transition: color 0.25s ease-in;
+        text-decoration: none;
+    }
 }
+#source-artist-image {
+    opacity: 0;
+    z-index: 1;
+    animation: fade 2s ease-in;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    @media screen and (min-width: 650px) {
+        width: 20vw;
+        height: 20vw;
+    }
+    @media screen and (max-width: 649px) {
+        width: 50vw;
+        height: 50vw;
+    }
+
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    pointer-events: none;
+    -webkit-box-shadow: 0px 0px 25px 5px rgba(0,0,0,0.5); 
+    box-shadow: 0px 0px 25px 5px rgba(0,0,0,0.5);
+}
+
 body {
     overflow: hidden;
 }
@@ -20,4 +57,9 @@ body {
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+@keyframes fade {
+    0% { opacity: 0; }
+    25% { opacity: 1;}
+    100% { opacity: 0; }
 }
