Styling Changes to LightBox

--- a/src/styles/layout/lightbox.scss
+++ b/src/styles/layout/lightbox.scss
@@ -78,7 +78,7 @@
         }
     }
     .lightbox-title {
-        margin: 0;
+        margin: 1em 0 0 0;
     }
     .lightbox-container {
         a{
