Small addition to Responsive Styling for Searchbar

--- a/src/styles/components/searchbar.scss
+++ b/src/styles/components/searchbar.scss
@@ -8,6 +8,9 @@
     }
     input {
         width: 95%;
+        @media screen and (max-width: 400px) {
+            width: 280px;
+        }
         background-color: #171717;
         color: white;
         font-size: 2em;
