Additional Styling Changes, added with Router for more frequent token retrieval

--- a/src/styles/layout/lightbox.scss
+++ b/src/styles/layout/lightbox.scss
@@ -33,6 +33,7 @@
         }
     }
     .close-icon {
+        transition: color 0.25s ease-in;
         text-align: unset;
         left: 0;
         display: initial;
