Added Logo, styling, Changes to similar artist class

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,5 @@
-$background-light: #f8f8ff;
-$text-light: #262626;
-$accent-light:#1ED760;
 $background-dark: #262626;
 $text-dark: #f8f8ff;
-$accent-dark: #1ED760;
+$accent-dark: #7986CB;
+$spotify-color: #1ED760;
+$lastfm-color: #d92323;
