--- a/src/styles/layout/index.scss
+++ b/src/styles/layout/index.scss
@@ -10,9 +10,11 @@
     src: local('Montserrat Bold'), url('../../static/fonts/montserrat/Montserrat-Bold.ttf');
 }
 html {
+    height: 100vh;
     background-color: $background-dark;
 }
 body {
+    height: 100%;
     font-family: "Montserrat-Regular";
     margin: 0;
     color: $text-dark;
@@ -30,7 +32,7 @@ body {
     a, a:visited {
         color: $text-dark;
         text-decoration: none;
-        transition: color 0.25s ease-in;
+        transition: color 0.125s ease-in;
     }
     a:hover {
         color: $accent-dark;
