--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,6 +1,33 @@
-#home-search {
+.searchbar-container {
+  margin:auto;
   position: fixed;
-  top: 45%;
+  top: 25%;
   left: 50%;
   transform: translate(-50%, 0);
+  h1 {
+    font-size: 60px; 
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+  svg {
+    width: 150px; 
+    margin: auto;
+    display: block;
+  }
+}
+.app-footer {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  p {
+      font-size: .9em;
+      display: block;
+      margin: 1em auto;
+      a {
+          font-family: "Montserrat Bold";
+          font-weight: 800;
+      }
+  }
 }
