--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -17,8 +17,11 @@
   }
 }
 .app-footer {
+  @media screen and (max-height: 700px) {
+    display: none;
+  }
   text-align: center;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   p {
@@ -26,7 +29,7 @@
       display: block;
       margin: 1em auto;
       a {
-          font-family: "Montserrat Bold";
+          font-family: "Montserrat-Bold";
           font-weight: 800;
       }
   }
