Added doubleclick for mobile devices, responsive styling for artist titles

--- a/src/styles/layout/lightbox.scss
+++ b/src/styles/layout/lightbox.scss
@@ -121,7 +121,12 @@
         }
     }
     .lightbox-title {
-        margin: .75em 0 0 0;
+        text-align: center;
+        margin: .75em auto;
+        @media screen and (max-width: 400px) {
+            word-break: break-word;
+            max-width: 250px;
+        }
     }
 
     .lightbox-container {
