--- a/src/styles/pages/similarArtist.scss
+++ b/src/styles/pages/similarArtist.scss
@@ -1,6 +1,7 @@
 @import '../colors';
 
 #artist-title {
+    word-break: break-word;
     font-weight: 900;
     margin-top: .5em;
     text-align: center;
@@ -19,6 +20,11 @@
         cursor: pointer;
         color: $accent-dark;
         text-decoration: none;
+    }
+    @media screen and (max-width: 400px) {
+        margin-top: .9em;
+        font-size: 1.5em;
+        max-width: 250px;
     }
 }
 #source-artist-image {
