--- a/src/styles/layout/lightbox.scss
+++ b/src/styles/layout/lightbox.scss
@@ -122,7 +122,7 @@
     }
     .lightbox-title {
         text-align: center;
-        margin: .75em auto;
+        margin: .75em auto 0;
         @media screen and (max-width: 400px) {
             word-break: break-word;
             max-width: 250px;
