Added Animation to search. Lowered number of requests. Styling

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,5 @@
-$background-dark: #262626;
-$text-dark: #f8f8ff;
+$background-dark: #121212;
+$text-dark: #ffffff;
 $accent-dark: #7986CB;
 $spotify-color: #1ED760;
 $lastfm-color: #d92323;
