--- a/src/styles/components/searchbar.scss
+++ b/src/styles/components/searchbar.scss
@@ -10,43 +10,53 @@
         background-image: url(../../static/icons/search.svg);
         background-repeat: no-repeat;
         background-position: left;
-        background-position-x: 1%;
+        background-position-x: 2%;
         background-size: 7%;
         background-color: white;
-        text-indent: 1em;
+        text-indent: 1.25em;
         width: 95%;
         @media screen and (max-width: 400px) {
+            font-size: 1.25em;
             width: 280px;
-            text-indent: .75em;
+            text-indent: 1.5em;
+            padding: .5em .25em;
         }
-        background-color: #171717;
+        background-color: #232323;
         color: white;
         font-size: 1.75em;
-        border-radius: 10px;
+        border-radius: 30px;
         border-color:transparent;
-        padding: .1em .25em;
+        padding: .25em .25em;
         outline: none;
         &.populated {
-            border-radius: 10px 10px 0px 0px;
+            border-radius: 30px 30px 0px 0px;
             border-bottom-color: rgba(255,255,255,.1);
         }
     }
 }
-.suggestions-container {
-    background-color: #171717;
+input + .suggestions-container{
+    background-color: #232323;
     a {
+        padding: .25em 0 .25em .5em;
         display: block;
         text-decoration: none;
     }
-    padding: .75em .75em .75em .75em;
-    border-radius: 0px 0px 10px 10px;
-}
-#suggestion-box {
-    display: none;
-    width: 93.5%;
-    &.populated{
-        display: block;
+    a:hover {
+        background-color: rgba(255,255,255,.1);
     }
+    padding: 1em 0 1.25em 0;
+    border-radius: 0px 0px 30px 30px;
+}
+input + #suggestion-box{
+    display: none;
+    width: 99.5%;
+    @media screen and (max-width: 400px) {
+        width: 98%;
+    }
+}
+input + #suggestion-box.populated{
+    
+    display: block;
 }
 
 @keyframes fadein {
