Changed scaling of searchbar

--- a/src/styles/components/searchbar.scss
+++ b/src/styles/components/searchbar.scss
@@ -2,9 +2,9 @@
 
 #home-search{
     animation: fadein 1s;
-    width: 400px;
+    //width: 400px;
     @media screen and (max-width: 400px) {
-        width: 300px;
+        //width: 300px;
     }
     input {
         background-image: url(../../static/icons/search.svg);
@@ -15,7 +15,7 @@
         background-color: white;
         text-indent: 1.25em;
         width: 95%;
-        @media screen and (max-width: 400px) {
+        @media screen and (max-width: 750px) {
             font-size: 1.25em;
             width: 280px;
             text-indent: 1.5em;
