Responsive Styling Additions

--- a/src/styles/layout/lightbox.scss
+++ b/src/styles/layout/lightbox.scss
@@ -1,5 +1,6 @@
 @import '../colors';
 .lightbox {
+    overflow-y: scroll !important;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     margin:auto;
@@ -7,7 +8,6 @@
     z-index: 100;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
     background-color: rgba(18,18,18,.8);
     text-align: center;
     transition: visibility .5s, opacity .5s linear;
