--- a/src/styles/layout/index.scss
+++ b/src/styles/layout/index.scss
@@ -11,6 +11,7 @@
 }
 html {
     background-color: $background-dark;
+    -webkit-font-smoothing: antialiased;
 }
 body {
     font-family: "Montserrat-Regular";
