--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,5 @@
 $background-dark: #121212;
 $text-dark: #ffffff;
-$accent-dark: #7986CB;
+$accent-dark: #7986cb;
 $spotify-color: #1ED760;
 $lastfm-color: #d92323;
