--- a/src/styles/layout/lightbox.scss
+++ b/src/styles/layout/lightbox.scss
@@ -61,6 +61,9 @@
         align-items: center;
         flex-direction: column;
         .track-container {
+            div:first-child{
+                margin-top: .75em;
+            }
             max-width: 25em;
             justify-content: left;
             @media screen and (max-width: 400px) {
