--- a/src/styles/pages/search.scss
+++ b/src/styles/pages/search.scss
@@ -1,4 +1,5 @@
 #back-link {
+    animation: fadein 2s ease-in;
     display: initial;
     position: absolute;
     margin: .5em;
@@ -18,4 +19,9 @@
         opacity: 0;
         visibility: hidden;
     }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
