Added help page

--- a/src/styles/layout/index.scss
+++ b/src/styles/layout/index.scss
@@ -6,7 +6,7 @@
 }
 @font-face {
     font-family: 'Montserrat-Bold';
-    font-style: normal;
+    font-style: bold;
     src: local('Montserrat Bold'), url('../../static/fonts/montserrat/Montserrat-Bold.ttf');
 }
 html {
