--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -39,13 +39,13 @@
     animation: fadein 2s ease-in;
     display: initial;
     position: absolute;
-    margin: .5em;
+    right: 0;
+    margin: 1em;
     text-decoration: none;
     opacity: 1;
     visibility: unset;
     transition: visibility .5s, opacity .5s linear, color 0.25s ease-in;
     #help-button {
-        margin-top: .9em;
         padding: .25em;
         width: 2em;
     }
