--- a/src/styles/pages/help.scss
+++ b/src/styles/pages/help.scss
@@ -1,6 +1,6 @@
 @import '../colors';
 #help {
-    animation: fade 1s ease-in;
+    animation: fadeHelp 1s ease-in;
     height: 100vh;
     overflow-y: auto !important;
 }
@@ -112,12 +112,12 @@
         padding-bottom: .5em;
         margin:0;
     }
-}
-@keyframes zoom {
-    from { transform: scale(1) }
-    to   { transform: scale(.75) }
-}
-@keyframes fade {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+    @keyframes zoom {
+        from { transform: scale(1) }
+        to   { transform: scale(.75) }
+    }
+    @keyframes fadeHelp {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+    }
 }
