--- a/src/styles/pages/help.scss
+++ b/src/styles/pages/help.scss
@@ -73,7 +73,7 @@
         h5 {
             margin: 0;
             margin-top: 0;
-            animation: fade 2s ease-in infinite alternate;
+            animation: fadeHelp 2s ease-in infinite alternate;
         }
         p {
             max-width: 200px;
